update-manager (1:0.146.1) UNRELEASED; urgency=low

  * merged lp:~evfool/update-manager/fix689034:
    - Some basic string fixes (lp:#689034), thanks to Robert Roth


 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Feb 2011 17:09:56 +0100

update-manager (1:0.146) natty; urgency=low

  * DistUpgrade/DistUpgradeView*.py:
    - pass apt.Package object to the view instead of strings, this
      allows to show additional info on the packages (like summary
      or size)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - check for libgtk2-perl for debconf support
  * AutoUpgradeTester/install_blacklist.cfg:
    - update blacklist for creating main-all images
  * UpdateManager/ReleaseNotesViewer.py:
    - use monospace font (LP: #153228)
  * DistUpgrade/DistUpgradeController.py:
    - perform btrfs snapshot on upgrade if apt-btrfs-snapshot is 
      available

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Feb 2011 21:19:12 +0100

update-manager (1:0.145.13) natty; urgency=low

  * fix ReleaseAnnoucement.html auto generation

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 20:48:42 +0100

update-manager (1:0.145.12) natty; urgency=low

  * debian/control:
    - drop build-depend on fglrx-modalias
  * DistUpgrade/DistUpgradeQuirks.py:
    - port fglrx-modalias checking code to new modaliases support from
      the pkgrecords
  * tests/test_quirks.py:
    - update tests

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 14:49:19 +0100

update-manager (1:0.145.11) natty; urgency=low

  * debian/91-release-upgrade:
    - test if the script exists before running it (thanks to
      Kees Cook)
  * pre-build.sh:
    - auto generate html files from the *ReleaseAnnoucement
      files
  * merged 
    lp:~brendan-donegan/update-manager/updated-signal-and-no-update-option
    (many thanks)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 28 Jan 2011 22:27:56 +0100

update-manager (1:0.145.10) natty; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py: