@@ -2,6 +2,8 @@ update-manager (1:0.146.1) UNRELEASED; urgency=low
 
   * merged lp:~evfool/update-manager/fix689034:
     - Some basic string fixes (lp:#689034), thanks to Robert Roth
+  * UpdateManager/Core/roam.py:
+    - add backend for roaming detection, thanks to Alex Chiang
 
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Feb 2011 17:09:56 +0100
